gitops/gateway.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: coolstore
      app.kubernetes.io/instance: gateway
      app.kubernetes.io/part-of: coolstore
      app.kubernetes.io/name: java
    name: gateway
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: coolstore
      app.kubernetes.io/instance: gateway
    strategy:
      activeDeadlineSeconds: 21600
      rollingParams:
        timeoutSeconds: 600
      resources: {}
      type: Rolling
    template:
      metadata:
        annotations:
          sidecar.istio.io/inject: "true"
        labels:
          app: coolstore
          app.kubernetes.io/instance: gateway
      spec:
        containers:
        - envFrom:
          - secretRef:
              name: catalog-8080
          - secretRef:
              name: inventory-8080
          image: quay.io/mcouliba/gateway-vertx:3.1_debugging
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: gateway
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8443
            name: 8443-tcp
            protocol: TCP
          - containerPort: 8778
            name: 8778-tcp
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      app: coolstore
      app.kubernetes.io/instance: gateway
      app.kubernetes.io/part-of: coolstore
    name: gateway
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: coolstore
      app.kubernetes.io/instance: gateway
    sessionAffinity: None
    type: ClusterIP
