gitops/web.yml

apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: coolstore
      app.kubernetes.io/instance: web
      app.kubernetes.io/part-of: coolstore
    name: web
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: coolstore
      app.kubernetes.io/instance: web
    sessionAffinity: None
    type: ClusterIP
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      app: coolstore
      app.kubernetes.io/instance: web
      app.kubernetes.io/part-of: coolstore
    name: web
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: coolstore
        app.kubernetes.io/instance: web
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: coolstore
          app.kubernetes.io/instance: web
      spec:
        containers:
        - image: quay.io/mcouliba/web-nodejs:3.1_debugging
          imagePullPolicy: Always
          name: web
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
