gitops/istio-gateway.yml
apiVersion: v1
kind: List
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    name: istio-gateway
  spec:
    selector:
      istio: ingressgateway # use Istio default gateway implementation
    servers:
      - port:
          number: 80
          name: http
          protocol: HTTP
        hosts:
          - "*"
