gitops/gateway.yml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      app.openshift.io/connects-to: catalog,inventory
    labels:
      app: coolstore
      app.kubernetes.io/instance: gateway
      app.kubernetes.io/part-of: coolstore
    name: gateway
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: gateway
      app: coolstore
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          alpha.image.policy.openshift.io/resolve-names: '*'
        creationTimestamp: null
        labels:
          deploymentconfig: gateway
          app: coolstore
          app.kubernetes.io/instance: gateway
      spec:
        containers:
        - envFrom:
          - secretRef:
              name: catalog-8080
          - secretRef:
              name: inventory-8080
          image: quay.io/mcouliba/gateway-vertx:3.1_debugging
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: gateway
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8443
            name: 8443-tcp
            protocol: TCP
          - containerPort: 8778
            name: 8778-tcp
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      app: gateway
    name: gateway
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: gateway
    sessionAffinity: None
    type: ClusterIP
- apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    name: istio-gateway
  spec:
    selector:
      istio: ingressgateway # use Istio default gateway implementation
    servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "*"
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: gateway
  spec:
    hosts:
    - "*"
    gateways:
    - istio-gateway
    http:
    - match:
      - uri:
          prefix: /${COOLSTORE_PROJECT}/api
      rewrite:
        uri: "/api"
      route:
      - destination:
          port:
            number: 8080
          host: gateway
- apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    name: web-gateway
  spec:
    selector:
      istio: ingressgateway # use istio default controller
    servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - ${COOLSTORE_PROJECT}.${APPS_HOSTNAME_SUFFIX}
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: web
  spec:
    hosts:
    - "*"
    gateways:
    - web-gateway
    http:
    - route:
      - destination:
          host: web
          port:
            number: 8080
