gitops/istio-virtual-service.yml
apiVersion: v1
kind: List
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: gateway
  spec:
    hosts:
      - "*"
    gateways:
      - istio-gateway
    http:
      - match:
          - uri:
              prefix: /${COOLSTORE_PROJECT}/api
        rewrite:
          uri: "/api"
        route:
          - destination:
              port:
                number: 8080
              host: gateway
